--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,8 @@ email: "admin@gekimlaw.com"
 description: >- # this means to ignore newlines until "baseurl:"
   Coming soon...
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "https://gekimlaw.com" # the base hostname & protocol for your site, e.g. http://example.com
+#url: "https://gekimlaw.com" # the base hostname & protocol for your site, e.g. http://example.com
+url: "https://gekimlaw.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 #twitter_username: jekyllrb
 #github_username:  jekyll
 site_logo: "/assets/images/logo_1.png"
