--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -3,15 +3,13 @@
   url: /about
 - text: Services
   url: /services
-- text: Portfolios 
+- text: Featured 
   url: /portfolios
 - text: Blog
   url: /blog
   submenu:
   - text: Blog Details
     url: /wordpress-hosting
-  - text: 404
-    url: /404
 - text: Contact Us
   url: /contact
  
