--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ description: >- # this means to ignore newlines until "baseurl:"
   Coming soon...
 baseurl: "" # the subpath of your site, e.g. /blog
 #url: "https://gekimlaw.com" # the base hostname & protocol for your site, e.g. http://example.com
-url: "https://gekimlaw.github.io" # the base hostname & protocol for your site, e.g. http://example.com
+url: "https://gekimlaw.com" # the base hostname & protocol for your site, e.g. http://example.com
 #twitter_username: jekyllrb
 #github_username:  jekyll
 site_logo: "/assets/images/logo_1.png"
