--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://gekimlaw.com" # the base hostname & protocol for your site, e.g. http://example.com
 #twitter_username: jekyllrb
 #github_username:  jekyll
-site_logo: "/assets/images/banner_1.png"
+site_logo: "/assets/images/logo_1.png"
 copyright: "Copyright &copy; 2010 <span>GE Kim Law</span>. All rights reserved."
 
 permalink: "/:title"
