changed hire us to contact us

--- a/_config.yml
+++ b/_config.yml
@@ -144,4 +144,4 @@ hire_us:
   description: "Empowering Families, Championing Education Rights."
   button:
     link: "/contact/"
-    name: "Hire Us"
+    name: "Contact Us"
