--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,4 +1,12 @@
 #Please use the main menu items under the "text"
-
-
- 
+- text: About Us
+  url: /about
+  submenu:
+  - text: Our Team
+    url: /ourteam
+- text: Featured
+  url: /portfolios
+- text: Reviews 
+  url: /reviews
+- text: Blog
+  url: /blog
