Updated header and removed some of the contact us buttons

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,3 +1,10 @@
 #Please use the main menu items under the "text"
 - text: About Us
   url: /about
+  submenu:
+  - text: Our Team
+    url: /ourteam
+- text: Featured
+  url: /portfolios
+- text: Blog
+  url: /blog
