--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: "GE Kim Law"
+title: "GEKIM LAW"
 email: "admin@gekimlaw.com"
 description: >- # this means to ignore newlines until "baseurl:"
   Coming soon...
